Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,13 @@ steps:
 - task: Xcode@5
   inputs:
     actions: 'build'
-    scheme: 'FeedMe'
-    sdk: 'iphoneos'
     configuration: 'Release'
+    sdk: 'iphoneos'
     xcWorkspacePath: 'FeedMe.xcworkspace'
-    xcodeVersion: 'default' # Options: 8, 9, 10, default, specifyPath
+    scheme: 'FeedMe'
+    packageApp: true
+    exportArgs: 'Automatic Test'
+    signingOption: 'auto'
+    teamId: 'UY48DQR2XB'
     
 
