Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,17 @@ steps:
     projectDirectory: '$(system.defaultWorkingDirectory)'
   displayName: 'pod install using the CocoaPods task with a forced repo update and a custom project directory'
 
+- task: InstallAppleProvisioningProfile@1
+  inputs:
+    provisioningProfileLocation: 'secureFiles'
+    provProfileSecureFile: 'testpn_ios_profile.mobileprovision'
+
+- task: InstallAppleCertificate@2
+  inputs:
+    certSecureFile: 'std_Certificates.p12'
+    certPwd: '$(certpwd)'
+    keychain: 'temp'
+
 - task: Xcode@5
   inputs:
     actions: 'build'
