Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,6 @@ steps:
     scheme: 'FeedMe'
     packageApp: true
     exportArgs: 'Automatic Test'
-    signingOption: 'auto'
-    teamId: 'UY48DQR2XB'
+    signingOption: 'default'
     
 
