Update azure-pipelines.yml for Azure Pipelines
back to auto without team id

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ steps:
     xcWorkspacePath: 'FeedMe.xcworkspace'
     scheme: 'FeedMe'
     packageApp: false
-    signingOption: 'manual'
+    signingOption: 'auto'
     useXcpretty: false
     
 
