Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,7 +13,9 @@ steps:
 
 - task: CocoaPods@0
   inputs:
-    forceRepoUpdate: false
+    forceRepoUpdate: true
+    projectDirectory: '$(system.defaultWorkingDirectory)'
+  displayName: 'pod install using the CocoaPods task with a forced repo update and a custom project directory'
 
 - task: Xcode@5
   inputs:
