--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,8 +20,8 @@ steps:
 - task: Xcode@5
   inputs:
     actions: 'build'
-    scheme: ''
+    scheme: 'FeedMe'
     sdk: 'iphoneos'
     configuration: 'Release'
-    xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
+    xcWorkspacePath: 'FeedMe.xcworkspace'
     xcodeVersion: 'default' # Options: 8, 9, 10, default, specifyPath
