Update azure-pipelines-1.yml for Azure Pipelines
only cert

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -36,4 +36,4 @@ steps:
     scheme: 'FeedMe'
     packageApp: false
     signingOption: 'manual'
-    provisioningProfileUuid: '$(APPLE_PROV_PROFILE_UUID)'
+    signingIdentity: '$(APPLE_CERTIFICATE_SIGNING_IDENTITY)'
