--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,15 @@ steps:
 - script: /usr/local/bin/pod install
   displayName: 'pod install using a script'
 
-
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      echo "Uninstalling all CocoaPods versions..."
+      sudo gem uninstall cocoapods -ax
+      echo "Installing CocoaPods version 1.5.3..."
+      sudo gem install cocoapods -v 1.5.3
+      
 - task: CocoaPods@0
   inputs:
     forceRepoUpdate: true
