Update azure-pipelines.yml for Azure Pipelines
added npm firebase

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,9 @@ steps:
   displayName: 'pod install using a script'
 
 
+- task: CmdLine@2
+  inputs:
+  script: 'npm install -g firebase-tools'
       
 - task: CocoaPods@0
   inputs:
@@ -43,6 +46,8 @@ steps:
     provisioningProfileUuid: '$(APPLE_PROV_PROFILE_UUID)'
     useXcpretty: false
     
+
+
 - task: Bash@3
   inputs:
     targetType: 'inline'
